--- a/_posts/2014-01-14-app-sale.markdown
+++ b/_posts/2014-01-14-app-sale.markdown
@@ -9,7 +9,7 @@ categories: Android App
 It's a post-Christmas, post-Boxing Day (for my fellow Canadians), late to the party, app sale!
 
 <div class="clearfix">
-<img src="https://dl.dropbox.com/u/6578423/gnexus.png"  alt="Ticklebug for Android" width="30%" style="float: left;margin:0 20px;"/>
+<img src="/blog/images/gnexus.png"  alt="Ticklebug for Android" width="30%" style="float: left;margin:0 20px;"/>
 <p>
 <a href="https://play.google.com/store/apps/details?id=com.nloko.android.ticklebug.pro">Ticklebug Pro</a> is on sale for 50% off. Get it now for only $1.49! Ticklebug is a super smart and simple Android app that lets you remote control your Windows and Mac computers from the comfort of your mobile device.
 </p>
@@ -18,6 +18,6 @@ It's a post-Christmas, post-Boxing Day (for my fellow Canadians), late to the pa
 <div class="mt4 clearfix">
 <iframe width="70%" height="300" src="https://www.youtube.com/embed/0UfeGpUOKe0" frameborder="0" allowfullscreen style="float: right;"></iframe>
 <p>
-Pictures are better than words, and videos are better than pictures. So, take a look and <a href="http://ticklebugapp.nloko.ca">see what Ticklebug can do</a>.
+Pictures are better than words, and videos are better than pictures. So, take a look and <a href="http://www.nloko.ca/ticklebug">see what Ticklebug can do</a>.
 </p>
 </div>
